[package]
name = "reservation-msservice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tonic = "0.12.2"
prost = "0.13.5"
prost-types = "0.13.5"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
env_logger = "0.11.5"
config = "0.15.7"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "mysql", "macros", "migrate", "chrono", "runtime-tokio-native-tls"] }
async-trait = "0.1.86"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15"

[build-dependencies] 
tonic-build="0.12.2"